Fixed some layout flaws on mobile devices.

--- a/www/_web/css/content2.css
+++ b/www/_web/css/content2.css
@@ -35,7 +35,6 @@ p {
 hr {
     border: 1px solid #DDDDDD;
     margin-bottom: 30px;
-    width: 400px;
 }
 input {
     border: 1px solid #CCCCCC;
@@ -94,7 +93,7 @@ textarea {
     background-color: #454A59;
     border-radius: 3px 3px 3px 3px;
     color: #EEEEEE;
-    height: 34px;
+    height: 36px;
     overflow: hidden;
     position: absolute;
     right: 195px;
@@ -172,7 +171,7 @@ textarea {
 }
 #module {
     background-color: #FFFFFF;
-    padding:24px 0;
+    padding-bottom:24px;
     display:block;
     background-color:#fff;
     margin:0 auto;
@@ -192,8 +191,9 @@ textarea {
 #action_bar a, #action_bar button {
     background-color: #DDDDDD;
     color: #444444;
-    padding: 2px 4px;
+    padding: 6px 16px;
     border-radius:3px;
+    margin: 6px 0;
 }
 #action_bar a:hover, #action_bar button:hover {
     background-color: #999999;
@@ -225,7 +225,7 @@ form p {
 	background-image: url("../img/warning.png");
 	background-repeat: no-repeat;
 	background-size: 20px 20px;
-	padding-left:30px;
+	padding-left:26px;
 }
 #footer {
     background-color: #323544;
@@ -259,9 +259,10 @@ form p {
     width: 95px;
 }
 #launch_menu {
-    margin: 20px auto;
+    margin:0 auto;
     text-align: center;
     max-width:660px;
+    padding: 50px 0;
 }
 .tile a {
     background-color: #CCCCCC;
@@ -326,8 +327,9 @@ form p {
 }
 .rooms li {
     display: inline-block;
-    width: 118px;
+    min-width: 80px;
     margin:12px 0;
+    padding-right:40px;
 }
 .components {
     list-style: none outside none;
